command line js; small layout changes

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -15,6 +15,7 @@
       <div class="header">
         <h1 class="title"><a href="/">Attila O.'s weblog</a></h1>
         <div class="flower"></div>
+        <div class="j_canvas canvas"></div>
         <div class="grass"></div>
       </div>
       <div class="container">
