--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,7 @@ layout: base
 ---
 
 <h1><a href="{{ page.url }}">{{ page.title }}</a></h1>
+<div class="hr"></div>
 <blockquote>
   <span class="date"></span> posted on: <code>{{ page.date | date_to_string }}</code>;
   <span class="tags"></span> tags: {% for tag in page.tags %}<code>{{ tag }}</code>{% if forloop.last %};{% else %}, {% endif %}{% endfor %}
@@ -10,4 +11,7 @@ layout: base
 
 {{ content }}
 
-<fb:comments width="690"></fb:comments>
+<div class="comments">
+    <div class="hr"></div>
+    <fb:comments></fb:comments>
+</div>
