--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet/less" href="/media/css/main.less" type="text/css" />
     <link rel="alternate" type="application/rss+xml" title="{{ page.title }}" href="http://feeds.feedburner.com/aatiisme" />
     <script src="/media/js/less-min.js"></script>
-    <script src="/media/js/ajs-min.js"></script>
+    <script src="/media/js/ajs-src.js"></script>
   </head>
   <body>
     <div class="wrapper">
