fixed rss markup

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,21 +1,20 @@
 <!doctype html>
 <html lang="en" xmlns:fb="http://www.facebook.com/2008/fbml">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/media/css/oocss.css" type="text/css" />
-    <link rel="stylesheet/less" href="/media/css/main.less" type="text/css" />
-    <link rel="stylesheet/less" href="/media/css/main.less" type="text/css" />
-    <link rel="alternate" type="application/rss+xml" title="{{ page.title }}" href="http://feeds.feedburner.com/aatiisme" />
+    <link rel="stylesheet" href="/media/css/oocss.css" type="text/css"/>
+    <link rel="stylesheet/less" href="/media/css/main.less" type="text/css"/>
+    <link rel="alternate" type="application/rss+xml" title="{{ page.title }}" href="http://feeds.feedburner.com/aatiisme"/>
     <script src="/media/js/less-min.js"></script>
-    <script src="/media/js/ajs-src.js"></script>
+    <script src="/media/js/ajs-min.js"></script>
   </head>
   <body>
     <div class="wrapper">
       <div class="header">
         <h1 class="title"><a href="/">Attila O.'s weblog</a></h1>
         <div class="flower"></div>
-        <div class="j_canvas canvas"></div>
+        <div class="j-canvas canvas"></div>
         <div class="grass"></div>
       </div>
       <div class="container">
@@ -30,9 +29,9 @@
             </div>
             <div class="unit size1of5 lastUnit">
               <div class="sidebar">
-                <div class="j_archives archives">
+                <div class="j-archives archives">
                   <div class="header">Archives</div>
-                  <div class="j_loader loader">Loading archives...</div>
+                  <div class="j-loader loader">Loading archives...</div>
                 </div>
                 <div class="blogs">
                   <div class="header">Worth checking out</div>
