--- a/media/css/main.less
+++ b/media/css/main.less
@@ -196,6 +196,7 @@ body {
             }
             .comments {
               ._white();
+              margin-top: 20px;
               padding: 5px 0 5px 10px;
               > .hr {
                 margin: 5px 10px 10px 0;
