--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -46,6 +46,7 @@
                   <ul>
                     <li class="bb"><a rel="me" href="http://bitbucket.org/attilaolah">BitBucket</a></li>
                     <li class="di"><a rel="me" href="http://digg.com/aatiis">Digg</a></li>
+                    <li class="dl"><a rel="me" href="http://www.delicious.com/aatiis">Delicious</a></li>
                     <li class="dm"><a rel="me" href="http://www.dailymotion.com/attilaolah">Dailymotion</a></li>
                     <li class="el"><a rel="me" href="http://www.elance.com/s/attilaolah">Elance</a></li>
                     <li class="fb"><a rel="me" href="http://www.facebook.com/attilaolah">Facebook</a></li>
