--- a/media/css/main.less
+++ b/media/css/main.less
@@ -270,6 +270,7 @@ body {
               }
               .bb { ._p(bb); }
               .di { ._i(di); }
+              .dl { ._i(dl); }
               .dm { ._i(dm); }
               .el { ._i(el); }
               .fb { ._i(fb); }
