added missing async='true'

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -39,6 +39,7 @@
                     <li><a href="http://www.codinghorror.com/blog/">Coding Horror</a></li>
                     <li><a href="http://37signals.com/svn/">Signal vs. Noise</a></li>
                     <li><a href="http://www.stubbornella.org/">Stubbornella</a></li>
+                    <li><a href="http://richardneililagan.com/">Richard Neil Ilagan</a></li>
                   </ul>
                 </div>
                 <div class="me">
