--- a/media/css/main.less
+++ b/media/css/main.less
@@ -164,6 +164,7 @@ body {
             img {
               padding: 4px;
               border: 1px solid white;
+              max-width: 100%;
               ._white();
             }
             .summary {
