--- a/media/css/main.less
+++ b/media/css/main.less
@@ -48,6 +48,10 @@ body {
   padding: 0;
 }
 
+strong {
+  font-weight: bold;
+}
+
 /* Common color palette */
 h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
