--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <title>{{ page.title }}</title>
     <link rel="stylesheet/less" href="/media/css/main.less" type="text/css"/>
-    <link rel="alternate" type="application/rss+xml" title="{{ page.title }}" href="http://feeds.feedburner.com/aatiisme"/>
+    <link rel="alternate" type="application/rss+xml" title="Attila O.'s weblog" href="http://feeds.feedburner.com/aatiisme"/>
     <script src="/media/js/less-min.js"></script>
     <script src="/media/js/ajs-min.js"></script>
   </head>
