fix rss date layout

--- a/_layouts/rss.html
+++ b/_layouts/rss.html
@@ -5,13 +5,13 @@
     <link>http://aatiis.me/</link>
     <description>My personal blog.</description>
     <language>en-us</language>
-    {% for post in site.posts limit:1 %}<lastBuildDate>{{ post.date | date:"%a, %d %b %Y %H:%m:%S %z" }}</lastBuildDate>{% endfor %}
+    {% for post in site.posts limit:1 %}<lastBuildDate>{{ post.date | date:"%a, %d %b %Y %H:%M:%S %z" }}</lastBuildDate>{% endfor %}
     <atom:link href="http://feeds.feedburner.com/aatiisme" rel="self" type="application/rss+xml"/>{% for post in site.posts limit:10 %}
     <item>
       <title>{{ post.title }}</title>
       <link>http://aatiis.me{{ post.url }}</link>
       <description>{{ post.summary | xml_escape }}</description>
-      <pubDate>{{ post.date | date:"%a, %d %b %Y %H:%m:%S %z" }}</pubDate>
+      <pubDate>{{ post.date | date:"%a, %d %b %Y %H:%M:%S %z" }}</pubDate>
       <guid>http://aatiis.me{{ post.url }}</guid>
     </item>{% endfor %}
   </channel>
