--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="utf-8"/>
     <title>{{ page.title }}</title>
-    <link rel="stylesheet/less" href="/media/css/main.less" type="text/css"/>
+    <link rel="stylesheet" href="/media/css/main-min.css" type="text/css"/>
     <link rel="alternate" type="application/rss+xml" title="Attila O.'s weblog" href="http://feeds.feedburner.com/aatiisme"/>
-    <script src="/media/js/less-min.js"></script>
     <script src="/media/js/ajs-min.js"></script>
   </head>
   <body>
