--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -58,9 +58,10 @@
                     <li class="mi"><a rel="me" href="http://www.mixx.com/users/aatiis" title="Mixx"></a></li>
                     <li class="od"><a rel="me" href="http://www.odesk.com/users/~~c655e923931c4a94" title="oDesk"></a></li>
                     <li class="pi"><a rel="me" href="http://picasaweb.google.com/attilaolah" title="Picasa"></a></li>
-                    <li class="sf"><a rel="me" href="http://serverfault.com/users/31991/attila-olah" title="ServerFault"></a></li>
-                    <li class="so"><a rel="me" href="http://stackoverflow.com/users/252239/attila-olah" title="StackOverflow"></a></li>
-                    <li class="su"><a rel="me" href="http://superuser.com/users/25095/attila-olah" title="SuperUser"></a></li>
+                    <li class="so"><a rel="me" href="http://careers.stackoverflow.com/aatiis" title="Stack Overflow Careers"></a></li>
+                    <li class="sf"><a rel="me" href="http://serverfault.com/users/31991/attila-olah" title="Server Fault"></a></li>
+                    <li class="so"><a rel="me" href="http://stackoverflow.com/users/252239/attila-olah" title="Stack Overflow"></a></li>
+                    <li class="su"><a rel="me" href="http://superuser.com/users/25095/attila-olah" title="Super User"></a></li>
                     <li class="tw"><a rel="me" href="http://twitter.com/attilaolah" title="Twitter"></a></li>
                     <li class="yt"><a rel="me" href="http://youtube.com/user/DarckDesign" title="YouTube"></a></li>
                     <li class="wk"><a rel="me" href="http://en.wikipedia.org/wiki/User:Attila_Ol%C3%A1h" title="Wikipedia (English)"></a></li>
