--- a/media/css/main.less
+++ b/media/css/main.less
@@ -215,6 +215,10 @@ body {
                   width: inherit !important;
                   > iframe {
                     width: inherit !important;
+                    .post_area .connected label {
+                      position: relative;
+                      top: -4px;
+                    }
                   }
                 }
               }
