--- a/media/css/main.css
+++ b/media/css/main.css
@@ -435,68 +435,131 @@ body > .wrapper > .container > .content .sidebar > .me > ul {
   margin: 0 2px;
   padding: 5px 0 5px 5px;
 }
-body > .wrapper > .container > .content .sidebar > .me > ul > .bb {
-  background: url(/media/images/skin/social.png) no-repeat scroll -96px top transparent;
-}
-body > .wrapper > .container > .content .sidebar > .me > ul > .di {
-  background: url(/media/images/skin/social.png) no-repeat scroll -192px top transparent;
-}
-body > .wrapper > .container > .content .sidebar > .me > ul > .dl {
-  background: url(/media/images/skin/social.png) no-repeat scroll -320px top transparent;
-}
-body > .wrapper > .container > .content .sidebar > .me > ul > .dm {
-  background: url(/media/images/skin/social.png) no-repeat scroll -272px top transparent;
-}
-body > .wrapper > .container > .content .sidebar > .me > ul > .el {
-  background: url(/media/images/skin/social.png) no-repeat scroll -128px top transparent;
-}
-body > .wrapper > .container > .content .sidebar > .me > ul > .fb {
-  background: url(/media/images/skin/social.png) no-repeat scroll -16px top transparent;
-}
-body > .wrapper > .container > .content .sidebar > .me > ul > .gh {
-  background: url(/media/images/skin/social.png) no-repeat scroll -80px top transparent;
-}
 body > .wrapper > .container > .content .sidebar > .me > ul > .go {
+  background: url(/media/images/skin/social.png) no-repeat scroll -0px -16px transparent;
+}
+body > .wrapper > .container > .content .sidebar > .me > ul > .go:hover, body > .wrapper > .container > .content .sidebar > .me > ul .go:active {
   background: url(/media/images/skin/social.png) no-repeat scroll -0px top transparent;
 }
-body > .wrapper > .container > .content .sidebar > .me > ul > .ic {
-  background: url(/media/images/skin/social.png) no-repeat scroll -224px top transparent;
+body > .wrapper > .container > .content .sidebar > .me > ul > .fb {
+  background: url(/media/images/skin/social.png) no-repeat scroll -16px -16px transparent;
+}
+body > .wrapper > .container > .content .sidebar > .me > ul > .fb:hover, body > .wrapper > .container > .content .sidebar > .me > ul .fb:active {
+  background: url(/media/images/skin/social.png) no-repeat scroll -16px top transparent;
+}
+body > .wrapper > .container > .content .sidebar > .me > ul > .tw {
+  background: url(/media/images/skin/social.png) no-repeat scroll -32px -16px transparent;
+}
+body > .wrapper > .container > .content .sidebar > .me > ul > .tw:hover, body > .wrapper > .container > .content .sidebar > .me > ul .tw:active {
+  background: url(/media/images/skin/social.png) no-repeat scroll -32px top transparent;
 }
 body > .wrapper > .container > .content .sidebar > .me > ul > .in {
+  background: url(/media/images/skin/social.png) no-repeat scroll -48px -16px transparent;
+}
+body > .wrapper > .container > .content .sidebar > .me > ul > .in:hover, body > .wrapper > .container > .content .sidebar > .me > ul .in:active {
   background: url(/media/images/skin/social.png) no-repeat scroll -48px top transparent;
 }
 body > .wrapper > .container > .content .sidebar > .me > ul > .lf {
+  background: url(/media/images/skin/social.png) no-repeat scroll -64px -16px transparent;
+}
+body > .wrapper > .container > .content .sidebar > .me > ul > .lf:hover, body > .wrapper > .container > .content .sidebar > .me > ul .lf:active {
   background: url(/media/images/skin/social.png) no-repeat scroll -64px top transparent;
 }
-body > .wrapper > .container > .content .sidebar > .me > ul > .mi {
-  background: url(/media/images/skin/social.png) no-repeat scroll -208px top transparent;
+body > .wrapper > .container > .content .sidebar > .me > ul > .gh {
+  background: url(/media/images/skin/social.png) no-repeat scroll -80px -16px transparent;
+}
+body > .wrapper > .container > .content .sidebar > .me > ul > .gh:hover, body > .wrapper > .container > .content .sidebar > .me > ul .gh:active {
+  background: url(/media/images/skin/social.png) no-repeat scroll -80px top transparent;
+}
+body > .wrapper > .container > .content .sidebar > .me > ul > .bb {
+  background: url(/media/images/skin/social.png) no-repeat scroll -96px -16px transparent;
+}
+body > .wrapper > .container > .content .sidebar > .me > ul > .bb:hover, body > .wrapper > .container > .content .sidebar > .me > ul .bb:active {
+  background: url(/media/images/skin/social.png) no-repeat scroll -96px top transparent;
 }
 body > .wrapper > .container > .content .sidebar > .me > ul > .od {
+  background: url(/media/images/skin/social.png) no-repeat scroll -112px -16px transparent;
+}
+body > .wrapper > .container > .content .sidebar > .me > ul > .od:hover, body > .wrapper > .container > .content .sidebar > .me > ul .od:active {
   background: url(/media/images/skin/social.png) no-repeat scroll -112px top transparent;
 }
-body > .wrapper > .container > .content .sidebar > .me > ul > .pi {
-  background: url(/media/images/skin/social.png) no-repeat scroll -240px top transparent;
+body > .wrapper > .container > .content .sidebar > .me > ul > .el {
+  background: url(/media/images/skin/social.png) no-repeat scroll -128px -16px transparent;
 }
-body > .wrapper > .container > .content .sidebar > .me > ul > .sf {
-  background: url(/media/images/skin/social.png) no-repeat scroll -160px top transparent;
+body > .wrapper > .container > .content .sidebar > .me > ul > .el:hover, body > .wrapper > .container > .content .sidebar > .me > ul .el:active {
+  background: url(/media/images/skin/social.png) no-repeat scroll -128px top transparent;
 }
 body > .wrapper > .container > .content .sidebar > .me > ul > .so {
+  background: url(/media/images/skin/social.png) no-repeat scroll -144px -16px transparent;
+}
+body > .wrapper > .container > .content .sidebar > .me > ul > .so:hover, body > .wrapper > .container > .content .sidebar > .me > ul .so:active {
   background: url(/media/images/skin/social.png) no-repeat scroll -144px top transparent;
 }
+body > .wrapper > .container > .content .sidebar > .me > ul > .sf {
+  background: url(/media/images/skin/social.png) no-repeat scroll -160px -16px transparent;
+}
+body > .wrapper > .container > .content .sidebar > .me > ul > .sf:hover, body > .wrapper > .container > .content .sidebar > .me > ul .sf:active {
+  background: url(/media/images/skin/social.png) no-repeat scroll -160px top transparent;
+}
 body > .wrapper > .container > .content .sidebar > .me > ul > .su {
+  background: url(/media/images/skin/social.png) no-repeat scroll -176px -16px transparent;
+}
+body > .wrapper > .container > .content .sidebar > .me > ul > .su:hover, body > .wrapper > .container > .content .sidebar > .me > ul .su:active {
   background: url(/media/images/skin/social.png) no-repeat scroll -176px top transparent;
 }
-body > .wrapper > .container > .content .sidebar > .me > ul > .tw {
-  background: url(/media/images/skin/social.png) no-repeat scroll -32px top transparent;
+body > .wrapper > .container > .content .sidebar > .me > ul > .di {
+  background: url(/media/images/skin/social.png) no-repeat scroll -192px -16px transparent;
+}
+body > .wrapper > .container > .content .sidebar > .me > ul > .di:hover, body > .wrapper > .container > .content .sidebar > .me > ul .di:active {
+  background: url(/media/images/skin/social.png) no-repeat scroll -192px top transparent;
+}
+body > .wrapper > .container > .content .sidebar > .me > ul > .mi {
+  background: url(/media/images/skin/social.png) no-repeat scroll -208px -16px transparent;
+}
+body > .wrapper > .container > .content .sidebar > .me > ul > .mi:hover, body > .wrapper > .container > .content .sidebar > .me > ul .mi:active {
+  background: url(/media/images/skin/social.png) no-repeat scroll -208px top transparent;
+}
+body > .wrapper > .container > .content .sidebar > .me > ul > .ic {
+  background: url(/media/images/skin/social.png) no-repeat scroll -224px -16px transparent;
+}
+body > .wrapper > .container > .content .sidebar > .me > ul > .ic:hover, body > .wrapper > .container > .content .sidebar > .me > ul .ic:active {
+  background: url(/media/images/skin/social.png) no-repeat scroll -224px top transparent;
+}
+body > .wrapper > .container > .content .sidebar > .me > ul > .pi {
+  background: url(/media/images/skin/social.png) no-repeat scroll -240px -16px transparent;
+}
+body > .wrapper > .container > .content .sidebar > .me > ul > .pi:hover, body > .wrapper > .container > .content .sidebar > .me > ul .pi:active {
+  background: url(/media/images/skin/social.png) no-repeat scroll -240px top transparent;
 }
 body > .wrapper > .container > .content .sidebar > .me > ul > .yt {
+  background: url(/media/images/skin/social.png) no-repeat scroll -256px -16px transparent;
+}
+body > .wrapper > .container > .content .sidebar > .me > ul > .yt:hover, body > .wrapper > .container > .content .sidebar > .me > ul .yt:active {
   background: url(/media/images/skin/social.png) no-repeat scroll -256px top transparent;
 }
+body > .wrapper > .container > .content .sidebar > .me > ul > .dm {
+  background: url(/media/images/skin/social.png) no-repeat scroll -272px -16px transparent;
+}
+body > .wrapper > .container > .content .sidebar > .me > ul > .dm:hover, body > .wrapper > .container > .content .sidebar > .me > ul .dm:active {
+  background: url(/media/images/skin/social.png) no-repeat scroll -272px top transparent;
+}
 body > .wrapper > .container > .content .sidebar > .me > ul > .wk {
+  background: url(/media/images/skin/social.png) no-repeat scroll -288px -16px transparent;
+}
+body > .wrapper > .container > .content .sidebar > .me > ul > .wk:hover, body > .wrapper > .container > .content .sidebar > .me > ul .wk:active {
   background: url(/media/images/skin/social.png) no-repeat scroll -288px top transparent;
 }
 body > .wrapper > .container > .content .sidebar > .me > ul > .os {
+  background: url(/media/images/skin/social.png) no-repeat scroll -304px -16px transparent;
+}
+body > .wrapper > .container > .content .sidebar > .me > ul > .os:hover, body > .wrapper > .container > .content .sidebar > .me > ul .os:active {
   background: url(/media/images/skin/social.png) no-repeat scroll -304px top transparent;
+}
+body > .wrapper > .container > .content .sidebar > .me > ul > .dl {
+  background: url(/media/images/skin/social.png) no-repeat scroll -320px -16px transparent;
+}
+body > .wrapper > .container > .content .sidebar > .me > ul > .dl:hover, body > .wrapper > .container > .content .sidebar > .me > ul .dl:active {
+  background: url(/media/images/skin/social.png) no-repeat scroll -320px top transparent;
 }
 body > .wrapper > .container > .content .sidebar > .me > ul > li {
   float: left;
