--- a/media/css/main.less
+++ b/media/css/main.less
@@ -271,29 +271,33 @@ body {
               padding: 5px 0 5px 5px;
               ._i(@value) {
                 @lpad: @value * 16;
+                background: e(%('url(/media/images/skin/social.png) no-repeat scroll -%spx -16px transparent', @lpad));
+              }
+              ._h(@value) {
+                @lpad: @value * 16;
                 background: e(%('url(/media/images/skin/social.png) no-repeat scroll -%spx top transparent', @lpad));
               }
-              > .bb { ._i(6); }
-              > .di { ._i(12); }
-              > .dl { ._i(20); }
-              > .dm { ._i(17); }
-              > .el { ._i(8); }
-              > .fb { ._i(1); }
-              > .gh { ._i(5); }
-              > .go { ._i(0); }
-              > .ic { ._i(14); }
-              > .in { ._i(3); }
-              > .lf { ._i(4); }
-              > .mi { ._i(13); }
-              > .od { ._i(7); }
-              > .pi { ._i(15); }
-              > .sf { ._i(10); }
-              > .so { ._i(9); }
-              > .su { ._i(11); }
-              > .tw { ._i(2); }
-              > .yt { ._i(16); }
-              > .wk { ._i(18); }
-              > .os { ._i(19); }
+              > .go { ._i(0);  } > .go:hover, .go:active { ._h(0);  }
+              > .fb { ._i(1);  } > .fb:hover, .fb:active { ._h(1);  }
+              > .tw { ._i(2);  } > .tw:hover, .tw:active { ._h(2);  }
+              > .in { ._i(3);  } > .in:hover, .in:active { ._h(3);  }
+              > .lf { ._i(4);  } > .lf:hover, .lf:active { ._h(4);  }
+              > .gh { ._i(5);  } > .gh:hover, .gh:active { ._h(5);  }
+              > .bb { ._i(6);  } > .bb:hover, .bb:active { ._h(6);  }
+              > .od { ._i(7);  } > .od:hover, .od:active { ._h(7);  }
+              > .el { ._i(8);  } > .el:hover, .el:active { ._h(8);  }
+              > .so { ._i(9);  } > .so:hover, .so:active { ._h(9);  }
+              > .sf { ._i(10); } > .sf:hover, .sf:active { ._h(10); }
+              > .su { ._i(11); } > .su:hover, .su:active { ._h(11); }
+              > .di { ._i(12); } > .di:hover, .di:active { ._h(12); }
+              > .mi { ._i(13); } > .mi:hover, .mi:active { ._h(13); }
+              > .ic { ._i(14); } > .ic:hover, .ic:active { ._h(14); }
+              > .pi { ._i(15); } > .pi:hover, .pi:active { ._h(15); }
+              > .yt { ._i(16); } > .yt:hover, .yt:active { ._h(16); }
+              > .dm { ._i(17); } > .dm:hover, .dm:active { ._h(17); }
+              > .wk { ._i(18); } > .wk:hover, .wk:active { ._h(18); }
+              > .os { ._i(19); } > .os:hover, .os:active { ._h(19); }
+              > .dl { ._i(20); } > .dl:hover, .dl:active { ._h(20); }
               > li {
                 float: left;
                 list-style-type: none;
