--- a/media/css/main.css
+++ b/media/css/main.css
@@ -249,6 +249,12 @@ p {
 .center {
   text-align: center;
 }
+.left {
+  float: left;
+}
+.right {
+  float: right;
+}
 .white {
   background-color: white !important;
 }
