--- a/media/css/main.less
+++ b/media/css/main.less
@@ -78,6 +78,12 @@ p {
 .center {
   text-align: center;
 }
+.left {
+  float: left;
+}
+.right {
+  float: right;
+}
 .white {
   background-color: white !important;
 }
