--- a/media/css/main.less
+++ b/media/css/main.less
@@ -361,6 +361,14 @@ body {
   }
 }
 
+/* highlight & ul fixes */
+.highlight + ul {
+  margin-top: 1em;
+}
+ul + .highlight {
+  margin-top: 0.5em;
+}
+
 /* XXX: boilerplate */
 .treeview {
   font-size: 12px;
