added gravatar link

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -53,21 +53,22 @@
                     <li class="fb"><a rel="me" href="http://www.facebook.com/attilaolah" title="Facebook"></a></li>
                     <li class="gh"><a rel="me" href="http://github.com/aatiis" title="GitHub"></a></li>
                     <li class="go"><a rel="me" href="http://www.google.com/profiles/attilaolah" title="Google"></a></li>
+                    <li class="gr"><a rel="me" href="http://gravatar.com/aatiisme" title="Gravatar"></a></li>
                     <li class="ic"><a rel="me" href="http://www.icq.com/people/153505311" title="ICQ"></a></li>
                     <li class="in"><a rel="me" href="http://rs.linkedin.com/in/attilaolah" title="LinkedIn"></a></li>
                     <li class="lf"><a rel="me" href="http://www.last.fm/user/attilaolah" title="Last.fm"></a></li>
                     <li class="mi"><a rel="me" href="http://www.mixx.com/users/aatiis" title="Mixx"></a></li>
                     <li class="od"><a rel="me" href="http://www.odesk.com/users/~~c655e923931c4a94" title="oDesk"></a></li>
+                    <li class="os"><a rel="me" href="http://wiki.openstreetmap.org/wiki/User:Attila_Ol%C3%A1h" title="OpenStreetMap"></a></li>
                     <li class="pi"><a rel="me" href="http://picasaweb.google.com/attilaolah" title="Picasa"></a></li>
-                    <li class="so"><a rel="me" href="http://careers.stackoverflow.com/aatiis" title="Stack Overflow Careers"></a></li>
                     <li class="sf"><a rel="me" href="http://serverfault.com/users/31991/attila-olah" title="Server Fault"></a></li>
+                    <li class="so"><a rel="me" href="http://careers.stackoverflow.com/aatiis" title="Stack Overflow Careers"></a></li>
                     <li class="so"><a rel="me" href="http://stackoverflow.com/users/252239/attila-olah" title="Stack Overflow"></a></li>
                     <li class="su"><a rel="me" href="http://superuser.com/users/25095/attila-olah" title="Super User"></a></li>
                     <li class="tw"><a rel="me" href="http://twitter.com/attilaolah" title="Twitter"></a></li>
-                    <li class="yt"><a rel="me" href="http://youtube.com/user/DarckDesign" title="YouTube"></a></li>
                     <li class="wk"><a rel="me" href="http://en.wikipedia.org/wiki/User:Attila_Ol%C3%A1h" title="Wikipedia (English)"></a></li>
                     <li class="wk"><a rel="me" href="http://hu.wikipedia.org/wiki/Szerkeszt%C5%91:Attila_Ol%C3%A1h" title="Wikip&eacute;dia (Hungarian)"></a></li>
-                    <li class="os"><a rel="me" href="http://wiki.openstreetmap.org/wiki/User:Attila_Ol%C3%A1h" title="OpenStreetMap"></a></li>
+                    <li class="yt"><a rel="me" href="http://youtube.com/user/DarckDesign" title="YouTube"></a></li>
                   </ul>
                   <div class="clear"></div>
                 </div>
