fixed gravatar icon

--- a/media/css/main.less
+++ b/media/css/main.less
@@ -304,7 +304,7 @@ body {
               > .wk { ._i(18); } > .wk:hover, .wk:active { ._h(18); }
               > .os { ._i(19); } > .os:hover, .os:active { ._h(19); }
               > .dl { ._i(20); } > .dl:hover, .dl:active { ._h(20); }
-              > .dl { ._i(21); } > .dl:hover, .dl:active { ._h(21); }
+              > .gr { ._i(21); } > .gr:hover, .gr:active { ._h(21); }
               > li {
                 float: left;
                 list-style-type: none;
