--- a/media/css/main.css
+++ b/media/css/main.css
@@ -567,10 +567,10 @@ body > .wrapper > .container > .content .sidebar > .me > ul > .dl {
 body > .wrapper > .container > .content .sidebar > .me > ul > .dl:hover, body > .wrapper > .container > .content .sidebar > .me > ul .dl:active {
   background: url(/media/images/skin/social.png) no-repeat scroll -320px top transparent;
 }
-body > .wrapper > .container > .content .sidebar > .me > ul > .dl {
+body > .wrapper > .container > .content .sidebar > .me > ul > .gr {
   background: url(/media/images/skin/social.png) no-repeat scroll -336px -16px transparent;
 }
-body > .wrapper > .container > .content .sidebar > .me > ul > .dl:hover, body > .wrapper > .container > .content .sidebar > .me > ul .dl:active {
+body > .wrapper > .container > .content .sidebar > .me > ul > .gr:hover, body > .wrapper > .container > .content .sidebar > .me > ul .gr:active {
   background: url(/media/images/skin/social.png) no-repeat scroll -336px top transparent;
 }
 body > .wrapper > .container > .content .sidebar > .me > ul > li {
